products repsonive desktop

--- a/pages/product.html
+++ b/pages/product.html
@@ -33,7 +33,7 @@
 
   <body>
     <main id="main">
-      <section class="container p-3 ">
+      <section class="container p-3">
         <div class="row p-3">
           <h1 class="text-center fw-bolder text-uppercase text-brand-primary fs-2 lh-base py-4 text-shadow">
             Les ombrières solaires
@@ -44,13 +44,12 @@
           </p>
         </div>
 
-       
         <div class="row gap-3 p-3 text-center d-flex flex-row justify-content-lg-center vh-75">
           <h2 class="d-inline-block fs-8 text-center">Trois raisons de choisir les ombrières solaires Sunpower :</h2>
-          
-          <div id="durability" class="col-lg-3 d-lg-flex flex-column flex-lg-column-reverse justify-content-center">
-            <i class="bi bi-calendar-check fs-0 text-brand-ternary  flex-fill" ></i>
-            <h3 class="mt-3 text-brand-ternary fs-7 order-1 ">Durabilité prouvée</h3>
+
+          <div id="durabilité" class="col-lg-3 d-lg-flex flex-column flex-lg-column-reverse justify-content-center">
+            <i class="bi bi-calendar-check fs-0 text-brand-ternary flex-fill "></i>
+            <h3 class="mt-3 text-brand-ternary fs-7 order-1">Durabilité prouvée</h3>
             <p class="fs-8">
               Les ombrières solaires Sunpower sont conçus pour fonctionner parfaitement en conditions réelles.
             </p>
@@ -64,8 +63,8 @@
             </p>
           </div>
           <div id="energie" class="col-lg-3 d-lg-flex flex-column flex-lg-column-reverse justify-content-center">
-            <i class="bi bi-sun-fill fs-0 text-brand-ternary  flex-fill"></i>
-            <h3 class="mt-3 text-brand-ternary fs-7 order-1 ">Plus d'énergie</h3>
+            <i class="bi bi-sun-fill fs-0 text-brand-ternary flex-fill"></i>
+            <h3 class="mt-3 text-brand-ternary fs-7 order-1">Plus d'énergie</h3>
             <p class="fs-8 m-lg-0">
               Sunpower produit davantage d'énergie sur toute la durée de vie du système et offre l'assurance de faire
               des économies.
@@ -73,42 +72,47 @@
           </div>
         </div>
       </section>
-      <section id="products" class="container grid p-4 text-center ">
+      <section id="products" class=" container-fluid grid p-4 text-center m-lg-auto p-lg-5 col-10 align-items-center ">
         <div class="row">
           <h2 class="mt-3 fw-bolder text-uppercase text-brand-primary fs-2 py-4 text-shadow">Nos produits</h2>
           <p class="text-start fs-8">
             La gamme complète de panneaux solaires SunPower répond à tous vos besoins énergétiques, quels qu'ils soient.
           </p>
         </div>
-        <div class="row p-2 mt-4 bg-light rounded g-2">
-          <img class="p-0 rounded" src="../media/photos/panel1.png" alt="Panneaux solaires Sunpower Maxi" />
-          <h2 class="mt-3 text-brand-ternary fs-7 lh-base">Panneaux solaires Sunpower Maxi</h2>
-          <p class="fs-8">
-            Les panneaux solaires Sunpower Maxi allient le rendement le plus élevé du marché à une fiabilité inégalée et
-            une production optimale
-          </p>
+        <div class="row p-2 mt-4 bg-light rounded g-2 mx-auto ">
+          <img class="p-0 rounded col-lg-6 " src="../media/photos/panel1.png" alt="Panneaux solaires Sunpower Maxi" />
+          <div class="col-lg-6 align-self-lg-center">
+            <h2 class="mt-3 text-brand-ternary fs-7 lh-base">Panneaux solaires Sunpower Maxi</h2>
+            <p class="fs-8">
+              Les panneaux solaires Sunpower Maxi allient le rendement le plus élevé du marché à une fiabilité inégalée
+              et une production optimale
+            </p>
+          </div>
         </div>
-        <div class="row p-3 mt-4 bg-light rounded g-2">
-          <img class="p-0 rounded" src="../media/photos/panel3.png" alt="Panneaux solaires Sunpower Perform" />
-          <h2 class="mt-3 text-brand-ternary fs-7 lh-base">
-            Panneaux solaires<span style="display: block"></span>Sunpower Perform
-          </h2>
-          <p class="fs-8">
-            Les panneaux solaires Sunpower Perform affichent un rendement, une qualité et une fiabilité bien supérieurs
-            à ceux des panneaux conventionnels.
-          </p>
+        <div class='grid-lg  row-lg gap-3 justify-content-lg-evenly d-lg-flex'>
+
+          <div class="row p-3 mt-4 bg-light rounded g-2 col-lg-5  mx-auto">
+            <img class="p-0 rounded" src="../media/photos/panel3.png" alt="Panneaux solaires Sunpower Perform" />
+            <h2 class="mt-3 text-brand-ternary fs-7 lh-base">
+              Panneaux solaires<span style="display: block"></span>Sunpower Perform
+            </h2>
+            <p class="fs-8 h-50">
+              Les panneaux solaires Sunpower Perform affichent un rendement, une qualité et une fiabilité bien supérieurs
+              à ceux des panneaux conventionnels.
+            </p>
+          </div>
+          <div class="row p-3 mt-4 bg-light rounded g-2 col-lg-5 mx-auto">
+            <img class="p-0 rounded " src="../media/photos/panel4.png" alt="Panneaux solaires Sunpower Turbo" />
+            <h2 class="mt-3 text-brand-ternary fs-7 lh-base">
+              Panneaux solaires<span style="display: block"></span>Sunpower Turbo
+            </h2>
+            <p class="fs-8 flex-fill">
+              La fiabilité et les performances des panneaux solaires Sunpower, à la pointe du secteur, s'associent à la
+              technologie des micro-onduleurs pour maximiser le potentiel de votre toit.
+            </p>
+          </div>
         </div>
-        <div class="row p-3 mt-4 bg-light rounded g-2">
-          <img class="p-0 rounded" src="../media/photos/panel4.png" alt="Panneaux solaires Sunpower Turbo" />
-          <h2 class="mt-3 text-brand-ternary fs-7 lh-base">
-            Panneaux solaires<span style="display: block"></span>Sunpower Turbo
-          </h2>
-          <p class="fs-8">
-            La fiabilité et les performances des panneaux solaires Sunpower, à la pointe du secteur, s'associent à la
-            technologie des micro-onduleurs pour maximiser le potentiel de votre toit.
-          </p>
-        </div>
-      </section>
-    </main>
+        </section>
+      </main>
   </body>
 </html>
