--- a/pages/propos.html
+++ b/pages/propos.html
@@ -31,49 +31,57 @@
     <title>À propos</title>
   </head>
   <body>
-    <main id="main" class="text-center p-4">
-      <h1>À propos</h1>
+    <main id="main" class="container-lg text-center p-4">
+      <h1 class="mt-5 text-uppercase text-brand-primary fw-bold">À propos</h1>
       <section class="p-4">
-        <p>
-          <span>Fondée en 2013</span>, notre société Sunpower est basée à Grenoble. Son capital est de 10 millions
-          d’euros.
-        </p>
-        <div class="mt-5">
-          <img class="float-start" id="serge" src="" alt="Serge turing" />
-          <h3>Serge Turing</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+        <div class="vh-75 d-lg-flex flex-column justify-content-center align-items-center  ">
+          <h2 class="text-uppercase text-brand-primary fw-bolder ">la société</h2>
+          <p class="fs-8 w-75 ">
+            <span class="text-brand-primary">Fondée en 2013</span>, notre société Sunpower est basée à Grenoble. <br> Son
+            capital est de 10 millions d’euros.
+          </p>
         </div>
-        <div class="mt-5">
-          <img class="float-end" id="hugo" src="" alt="Hugo Oppenheimer" />
-          <h3>Hugo Oppenheimer</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-        </div>
-        <div class="mt-5">
-          <img class="float-start" id="alex" src="" alt="Alex Pareneinstein" />
-          <h3>Alex Pareneinstein</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-        </div>
-      </section>
-      <section id="#Historique" class="grid gap-5 row p-3" data-aos="fade-in">
-        <h2>Historique</h2>
-        <div class="bg-light py-3 rounded">
-          <img src="../media/svg/people_group.svg" alt=" group of people" />
-          <p>Collaboration avec <span class="text-brand-ternary fw-bolder">l’INES</span></p>
-          <p>le <span class="text-brand-ternary fw-bolder">CEA</span></p>
-          <p>et <span class="text-brand-ternary fw-bolder">l’ADEME</span></p>
-          <div class="p-3">
-            <img class="" src="../media/photos/1024px-Logo_Montpellier_Méditerranée_Métropole.png" alt="" />
-            <img class="" src="../media/photos/Logo_Toulouse_Metropole.png" alt="" />
+        <div class="vh-75 d-lg-flex flex-column justify-content-lg-evenly">
+
+          <div class="mt-5 col-lg-8 mx-auto ">
+            <img class="float-start" id="serge" src="" alt="Serge turing" />
+            <h3 class="text-lg-end">Serge Turing</h3>
+            <p class="text-lg-end">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+          </div>
+          <div class="mt-5 col-lg-8 mx-auto ">
+            <img class="float-end" id="hugo" src="" alt="Hugo Oppenheimer" />
+            <h3 class="text-lg-start">Hugo Oppenheimer</h3>
+            <p class="text-lg-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+          </div>
+          <div class="mt-5 col-lg-8 mx-auto ">
+            <img class="float-start" id="alex" src="" alt="Alex Pareneinstein" />
+            <h3 class="text-lg-end">Alex Pareneinstein</h3>
+            <p class="text-lg-end">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
           </div>
         </div>
-        <div class="bg-light py-3 rounded">
+        </section>
+      <section id="#Historique" class="grid gap-5 row p-3  text-uppercase text-brand-primary ">
+        <h2>Historique</h2>
+        <div class="mx-auto col-lg-3 bg-light py-3 rounded">
+          <img src="../media/svg/people_group.svg" alt=" group of people" />
+          <p>Nos Collaborateurs</p>
+          
+          <div class="p-3 grid ">
+            <img class="img-fluid w-25" src="../media/ademe.gif" alt="">
+            <img class="img-fluid w-25" src="../media/cea.gif" alt="">
+            <img class="img-fluid w-25" src="../media/ines.gif" alt="">
+            <img class="img-fluid w-25 mt-3" src="../media/photos/1024px-Logo_Montpellier_Méditerranée_Métropole.png" alt="" />
+            <img class="img-fluid w-25 mt-3" src="../media/photos/Logo_Toulouse_Metropole.png" alt="" />
+          </div>
+        </div>
+        <div class="mx-auto col-lg-3 bg-light py-3 rounded">
           <img class="p-3" src="../media/svg/Vector.svg" alt="arrow" />
           <p><span class="text-brand-ternary fw-bolder">30M d'euros</span> de levés</p>
           <p>+</p>
           <p><span>2M d'euros</span> d'aide de BPIfrance</p>
         </div>
-        <div class="bg-light py-3 rounded">
-          <img class="p-3" src="../media/svg/Vector-1.svg" alt="piggy bank" />
+        <div class="mx-auto col-lg-3 bg-light py-3 rounded  ">
+          <img class="p-3 mt-lg-5" src="../media/svg/Vector-1.svg" alt="piggy bank" />
           <p><span class="text-brand-ternary fw-bolder">10m+</span> deuros de capital généré</p>
         </div>
       </section>
