--- a/pages/propos.html
+++ b/pages/propos.html
@@ -36,26 +36,26 @@
       <section class="p-4">
         <div class="vh-75 d-lg-flex flex-column justify-content-center align-items-center  ">
           <h2 class="text-uppercase text-brand-primary fw-bolder ">la société</h2>
-          <p class="fs-8 w-75 ">
+          <p class="fs-8  text-shadow text-brand-primary">
             <span class="text-brand-primary">Fondée en 2013</span>, notre société Sunpower est basée à Grenoble. <br> Son
             capital est de 10 millions d’euros.
           </p>
         </div>
         <div class="vh-75 d-lg-flex flex-column justify-content-lg-evenly">
-
+          <h2 class="text-uppercase text-brand-primary fw-bolder">les fondatateurs</h2>
           <div class="mt-5 col-lg-8 mx-auto ">
             <img class="float-start" id="serge" src="" alt="Serge turing" />
-            <h3 class="text-lg-end">Serge Turing</h3>
+            <h3 class="text-lg-end text-shadow text-brand-primary">Serge Turing</h3>
             <p class="text-lg-end">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
           </div>
           <div class="mt-5 col-lg-8 mx-auto ">
             <img class="float-end" id="hugo" src="" alt="Hugo Oppenheimer" />
-            <h3 class="text-lg-start">Hugo Oppenheimer</h3>
+            <h3 class="text-lg-start text-shadow text-brand-primary">Hugo Oppenheimer</h3>
             <p class="text-lg-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
           </div>
           <div class="mt-5 col-lg-8 mx-auto ">
             <img class="float-start" id="alex" src="" alt="Alex Pareneinstein" />
-            <h3 class="text-lg-end">Alex Pareneinstein</h3>
+            <h3 class="text-lg-end text-shadow text-brand-primary">Alex Pareneinstein</h3>
             <p class="text-lg-end">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
           </div>
         </div>
