activities responsive mobile&deskto&panimations

--- a/pages/product.html
+++ b/pages/product.html
@@ -34,14 +34,16 @@
   <body>
     <main id="main">
       <section class="container p-3">
-        <div class="row p-3">
-          <h1 class="text-center fw-bolder text-uppercase text-brand-primary fs-2 lh-base py-4 text-shadow">
-            Les ombrières solaires
-          </h1>
-          <p class="fs-8">
-            Le développement des ombrières solaires pour la recharge des véhicules électriques constitue le pilier de
-            notre développement.
-          </p>
+        <div class="vh-90">
+          <div class="row p-3">
+            <h1 class="text-center fw-bolder text-uppercase text-brand-primary fs-2 lh-base py-4 text-shadow mb-lg-5">
+              Les ombrières solaires
+            </h1>
+            <p class="fs-9 col-lg-4 offset-lg-4 text-lg-center text-lg-uppercase mt-lg-5">
+              Le développement des ombrières solaires pour la recharge des véhicules électriques constitue le pilier de
+              notre développement.
+            </p>
+          </div>
         </div>
 
         <!-- text center vs text start ? -->
