enterprise contact form finished

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <link rel="stylesheet" href="./style.css" />
 
-    <script src="./dist/main.js" defer></script>
+    <script src="/sunpower/dist/main.js" defer></script>
 
     <title>Page d'accueil</title>
   </head>
