--- a/pages/propos.html
+++ b/pages/propos.html
@@ -42,7 +42,7 @@
           </p>
         </div>
         <div class="vh-75 d-lg-flex flex-column justify-content-lg-evenly">
-          <h2 class="text-uppercase text-brand-primary fw-bolder">les fondatateurs</h2>
+          <h2 class="text-uppercase text-brand-primary fw-bolder">Les fondateurs</h2>
           <div class="mt-5 col-lg-8 mx-auto">
             <img class="float-start" id="serge" src="" alt="Serge turing" />
             <h3 class="text-lg-end text-shadow text-brand-primary">Serge Turing</h3>
