add the last pages for contact

--- a/pages/contact_syn_form.html
+++ b/pages/contact_syn_form.html
@@ -96,12 +96,12 @@
                         placeholder="ex. Wick"
                         type="text"
                 />
-                    <label for="ent_form_ent_name">Nom de l’entreprise</label
+                    <label for="ent_form_syn_name">Nom du syndic</label
                     ><input
                         class="bg-brand-secondary_40 border-top-0 border-start-0 border-end-0 border-dark"
-                        id="ent_form_ent_name"
-                        name="ent_name"
-                        placeholder="ex. Baba Yaga Inc."
+                        id="ent_form_syn_name"
+                        name="syn_name"
+                        placeholder="ex. John Doe"
                         type="text"
                 />
                     <label for="ent_form_email">Email</label
