--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,10 +45,11 @@
 
           <ul id="contact_links" class="mx-auto p-5 list-unstyled d-flex flex-column gap-3 col-lg-4">
             <li class="rounded bg-brand-primary">
-              <a href="" class="d-block p-2 rounded text-decoration-none text-white">Particulier</a>
+              <a href="./contact_gen_form.html" class="d-block p-2 rounded text-decoration-none text-white">Particulier
+              </a>
             </li>
             <li class="rounded bg-brand-primary">
-              <a href="" class="d-block p-2 rounded text-decoration-none text-white">Syndic</a>
+              <a href="./contact_syn_form.html" class="d-block p-2 rounded text-decoration-none text-white">Syndic</a>
             </li>
             <li class="rounded bg-brand-primary">
               <a href="./contact_ent_form.html" class="d-block p-2 rounded text-decoration-none text-white h-100 w-100"
