--- a/pages/activities.html
+++ b/pages/activities.html
@@ -34,11 +34,11 @@
   <body>
     <main id="main" class="container">
       <section id="frame1" class="d-flex flex-column justify-content-evenly p-3">
-        <p class="fs-2 fw-bold text-uppercase text-center text-shadow py-4 mx-3">Activités</p>
+        <h1 class="fs-2 fw-bold text-uppercase text-center text-shadow py-4 mx-3 text-brand-primary">Activités</h1>
         <div class="row mb-lg-5">
           <p class="col-10 fs-8 fs-9">
-            <span class="text-brand-primary fw-bold fs-7">La recherche & développement</span>
-            <span class="paragraph-brand"> constituent l’ADN de la société.</span>
+            <h2 class="text-brand-primary fw-bold ">La recherche & développement</h2>
+            <span class="paragraph-brand d-lg-inline-block"> constituent l’ADN de la société.</span>
           </p>
         </div>
         <div class="row mb-lg-5">
@@ -56,7 +56,7 @@
           </p>
         </div>
         <div class="row mb-lg-5">
-          <p class="text-brand-primary fs-7 fw-bold">Nos principaux travaux concernent :</p>
+          <h3 class="text-brand-primary fs-7 fw-bold">Nos principaux travaux concernent :</h3>
           <ul class="list-unstyled fs-8 px-4">
             <li>L’électronique de puissance</li>
             <li>Le développement des BMS (Battery Mangement System)</li>
@@ -66,16 +66,16 @@
       </section>
       <section id="frame2" class="d-flex flex-column justify-content-evenly p-3">
         <div class="row mb-lg-5">
-          <p
-            class="col-10 fs-8 offset-lg-1 text-lg-center"
+          <div
+            class="col-10 offset-lg-1 text-lg-center"
             data-aos="fade-left"
             data-aos-offset="200"
             data-aos-delay="150"
             data-aos-duration="1000"
           >
-            <span class="text-brand-primary fw-bold fs-7">L’aide aux montages de projets</span>
-            et à la réalisation de ceux-ci est au centre de nos préocupations.
-          </p>
+            <h2 class="text-brand-primary fw-bold ">L’aide aux montages de projets</h2>
+            <p class="">et à la réalisation de ceux-ci est au centre de nos préocupations.</p> 
+          </div>
         </div>
         <div class="row mb-lg-5">
           <p
@@ -115,7 +115,7 @@
             data-aos-delay="150"
             data-aos-duration="1000"
           >
-            <span class="text-brand-primary fw-bold fs-7">Les ombrières solaires</span>
+            <h2 class="text-brand-primary fw-bold p-0 ">Les ombrières solaires</h2>
 
             et leur commercialisation sont la clé de voute de notre activité à ce jour.
           </p>
