--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,7 +28,7 @@
 
     <link rel="stylesheet" href="../style.css" />
     <script src="../dist/main.js" defer></script>
-    <title>contact</title>
+    <title>Contact</title>
   </head>
 
   <body>
