--- a/pages/map.html
+++ b/pages/map.html
@@ -33,7 +33,7 @@
 
   <body>
     <div class="title_map text-center text-brand-primary fw-bolder text-shadow fs-7 mb-0 py-4">
-      Retrouvez les localisations de notres ombrières
+      Retrouvez les localisations de nos ombrières
     </div>
 
     <div id="map" style="height: 85vh">
