--- a/pages/product.html
+++ b/pages/product.html
@@ -28,7 +28,7 @@
 
     <link rel="stylesheet" href="../style.css" />
     <script src="../dist/main.js" defer></script>
-    <title>Products</title>
+    <title>Produits</title>
   </head>
 
   <body>
