fixed heading, font size and classes

--- a/pages/activities.html
+++ b/pages/activities.html
@@ -34,12 +34,12 @@
   <body>
     <main id="main" class="container">
       <section id="frame1" class="d-flex flex-column justify-content-evenly p-3">
-        <h1 class="fs-2 fw-bold text-uppercase text-center text-shadow py-4 mx-3 text-brand-primary">Activités</h1>
+        <h1 class="fw-bold text-uppercase text-center text-shadow text-brand-primary py-4 mx-3 mt-lg-5">Activités</h1>
         <div class="row mb-lg-5">
-          <p class="col-10 fs-8 fs-9">
-            <h2 class="text-brand-primary fw-bold ">La recherche & développement</h2>
-            <span class="paragraph-brand d-lg-inline-block"> constituent l’ADN de la société.</span>
-          </p>
+          <div class="col-10">
+            <h2 class="text-brand-primary fw-bold">La recherche & développement</h2>
+            <p class="">constituent l’ADN de la société.</p>
+          </div>
         </div>
         <div class="row mb-lg-5">
           <p class="text-center col-10 offset-1 fs-8 fs-9">
@@ -73,8 +73,8 @@
             data-aos-delay="150"
             data-aos-duration="1000"
           >
-            <h2 class="text-brand-primary fw-bold ">L’aide aux montages de projets</h2>
-            <p class="">et à la réalisation de ceux-ci est au centre de nos préocupations.</p> 
+            <h2 class="text-brand-primary fw-bold">L’aide aux montages de projets</h2>
+            <p class=" ">et à la réalisation de ceux-ci est au centre de nos préocupations.</p>
           </div>
         </div>
         <div class="row mb-lg-5">
@@ -108,17 +108,16 @@
 
       <section id="frame3" class="d-flex flex-column justify-content-evenly p-3">
         <div class="row mb-lg-5">
-          <p
+          <div
             class="col-10 fs-8"
             data-aos="fade-left"
             data-aos-offset="200"
             data-aos-delay="150"
             data-aos-duration="1000"
           >
-            <h2 class="text-brand-primary fw-bold p-0 ">Les ombrières solaires</h2>
-
-            et leur commercialisation sont la clé de voute de notre activité à ce jour.
-          </p>
+            <h2 class="text-brand-primary fw-bold p-0">Les ombrières solaires</h2>
+            <p class="fs-6">et leur commercialisation sont la clé de voute de notre activité à ce jour.</p>
+          </div>
         </div>
         <div class="row mb-lg-5">
           <p
