--- a/pages/product.html
+++ b/pages/product.html
@@ -36,7 +36,7 @@
       <section class="container p-3">
         <div class="vh-90">
           <div class="row p-3">
-            <h1 class="text-center fw-bolder text-uppercase text-brand-primary fs-2 lh-base py-4 text-shadow mb-lg-5">
+            <h1 class="text-center fw-bolder text-uppercase text-brand-primary lh-base py-4 text-shadow mb-lg-5">
               Les ombrières solaires
             </h1>
             <p class="fs-9 col-lg-4 offset-lg-4 text-lg-center text-lg-uppercase mt-lg-5">
@@ -47,7 +47,7 @@
         </div>
 
         <div class="row gap-3 p-3 text-center d-flex flex-row justify-content-lg-center vh-75">
-          <h2 class="d-inline-block fs-8 text-center">Trois raisons de choisir les ombrières solaires Sunpower :</h2>
+          <h2 class="d-inline-block text-center">Trois raisons de choisir les ombrières solaires Sunpower :</h2>
 
           <div id="durabilité" class="col-lg-3 d-lg-flex flex-column flex-lg-column-reverse justify-content-center">
             <i class="bi bi-calendar-check fs-0 text-brand-ternary flex-fill"></i>
