--- a/pages/propos.html
+++ b/pages/propos.html
@@ -36,7 +36,7 @@
       <section class="p-4">
         <div class="vh-75 d-lg-flex flex-column justify-content-center align-items-center">
           <h2 class="text-uppercase text-brand-primary fw-bolder">la société</h2>
-          <p class="fs-8 text-shadow text-brand-primary">
+          <p class="fs-8 text-shadow ">
             <span class="text-brand-primary">Fondée en 2013</span>, notre société Sunpower est basée à Grenoble. <br />
             Son capital est de 10 millions d’euros.
           </p>
