--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,9 +33,9 @@
 
   <body>
     <main id="contact_menu" class="container p-3">
-      <section class="p-1">
+      <section class="p-0">
         <div class="p-3 text-lg-center">
-          <h1 class="text-uppercase fw-bold text-brand-primary">un renseignement ?</h1>
+          <h1 class="text-uppercase fw-bold text-brand-primary mt-lg-5">un renseignement ?</h1>
           <p class="text-uppercase fw-bold text-brand-primary">un devis ?</p>
           <p class="mt-4">
             Conseil pour l’implantation d’ombrières solaires, nous aurons toujours une solution adaptée à vos besoins.
