backbround for product animation propos

--- a/pages/propos.html
+++ b/pages/propos.html
@@ -34,7 +34,7 @@
     <main id="main" class="container-lg text-center p-4">
       <h1 class="mt-5 text-uppercase text-brand-primary fw-bold">À propos</h1>
       <section class="p-4">
-        <div class="vh-75 d-lg-flex flex-column justify-content-center align-items-center">
+        <div class="vh-75 d-lg-flex flex-column justify-content-center align-items-center ">
           <h2 class="text-uppercase text-brand-primary fw-bolder">la société</h2>
           <p class="fs-8 text-shadow ">
             <span class="text-brand-primary">Fondée en 2013</span>, notre société Sunpower est basée à Grenoble. <br />
@@ -43,21 +43,24 @@
         </div>
         <div class="vh-75 d-lg-flex flex-column justify-content-lg-evenly">
           <h2 class="text-uppercase text-brand-primary fw-bolder">Les fondateurs</h2>
-          <div class="mt-5 col-lg-8 mx-auto">
+          <div class="mt-5 col-lg-8 mx-auto"
+          data-aos="fade-left" data-aos-delay="600" data-aos-anchor-placement="bottom-bottom">
             <img class="float-start" id="serge" src="" alt="Serge turing" />
             <h3 class="text-lg-end text-shadow text-brand-primary">Serge Turing</h3>
             <p class="text-lg-end">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             </p>
           </div>
-          <div class="mt-5 col-lg-8 mx-auto">
+          <div class="mt-5 col-lg-8 mx-auto"
+          data-aos="fade-right" data-aos-delay="600" data-aos-anchor-placement="bottom-bottom">
             <img class="float-end" id="hugo" src="" alt="Hugo Oppenheimer" />
             <h3 class="text-lg-start text-shadow text-brand-primary">Hugo Oppenheimer</h3>
             <p class="text-lg-start">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             </p>
           </div>
-          <div class="mt-5 col-lg-8 mx-auto">
+          <div class="mt-5 col-lg-8 mx-auto"
+          data-aos="fade-left" data-aos-delay="600" data-aos-anchor-placement="bottom-bottom">
             <img class="float-start" id="alex" src="" alt="Alex Pareneinstein" />
             <h3 class="text-lg-end text-shadow text-brand-primary">Alex Pareneinstein</h3>
             <p class="text-lg-end">
@@ -73,15 +76,20 @@
           <p>Nos Collaborateurs</p>
 
           <div class="p-3 grid">
-            <img class="img-fluid w-25" src="../media/ademe.gif" alt="" />
-            <img class="img-fluid w-25" src="../media/cea.gif" alt="" />
-            <img class="img-fluid w-25" src="../media/ines.gif" alt="" />
+            <img class="img-fluid w-25" data-aos="flip-up" data-aos-anchor-placement = "center-center" src="../media/ademe.gif" alt="" />
+            <img class="img-fluid w-25" data-aos="flip-up" data-aos-anchor-placement = "center-center" src="../media/cea.gif" alt="" />
+            <img class="img-fluid w-25" data-aos="flip-up" data-aos-anchor-placement = "center-center" src="../media/ines.gif" alt="" />
             <img
               class="img-fluid w-25 mt-3"
               src="../media/photos/1024px-Logo_Montpellier_Méditerranée_Métropole.png"
               alt=""
+
+              data-aos="flip-up" data-aos-anchor-placement = "center-center"
+              data-aos-delay="300" 
             />
-            <img class="img-fluid w-25 mt-3" src="../media/photos/Logo_Toulouse_Metropole.png" alt="" />
+            <img class="img-fluid w-25 mt-3" 
+            data-aos="flip-up" data-aos-anchor-placement = "center-center"
+            data-aos-delay="300" src="../media/photos/Logo_Toulouse_Metropole.png" alt="" />
           </div>
         </div>
         <div class="mx-auto col-lg-3 bg-light py-3 rounded">
