--- a/pages/propos.html
+++ b/pages/propos.html
@@ -41,7 +41,7 @@
             Son capital est de 10 millions d’euros.
           </p>
         </div>
-        <div class="vh-75 d-lg-flex flex-column justify-content-lg-evenly">
+        <div class="vh-75 d-lg-flex flex-column justify-content-lg-evenly mt-5">
           <h2 class="text-uppercase text-brand-primary fw-bolder">Les fondateurs</h2>
           <div class="mt-5 col-lg-8 mx-auto"
           data-aos="fade-left" data-aos-delay="600" data-aos-anchor-placement="bottom-bottom">
@@ -71,7 +71,7 @@
       </section>
       <section id="#Historique" class="grid gap-5 row p-3 text-uppercase text-brand-primary">
         <h2>Historique</h2>
-        <div class="mx-auto col-lg-3 bg-light py-3 rounded">
+        <div class="mx-auto col-lg-3 bg-transparent py-3 rounded">
           <img src="../media/svg/people_group.svg" alt=" group of people" />
           <p>Nos Collaborateurs</p>
 
@@ -92,15 +92,15 @@
             data-aos-delay="300" src="../media/photos/Logo_Toulouse_Metropole.png" alt="" />
           </div>
         </div>
-        <div class="mx-auto col-lg-3 bg-light py-3 rounded">
+        <div class="mx-auto col-lg-3 bg-transparent py-3 rounded">
           <img class="p-3" src="../media/svg/Vector.svg" alt="arrow" />
           <p><span class="text-brand-ternary fw-bolder">30M d'euros</span> de levés</p>
           <p>+</p>
           <p><span>2M d'euros</span> d'aide de BPIfrance</p>
         </div>
-        <div class="mx-auto col-lg-3 bg-light py-3 rounded">
-          <img class="p-3 mt-lg-5" src="../media/svg/Vector-1.svg" alt="piggy bank" />
-          <p><span class="text-brand-ternary fw-bolder">10m+</span> deuros de capital généré</p>
+        <div class="mx-auto col-lg-3 bg-transparent py-3 rounded">
+          <img class=" " src="../media/svg/Vector-1.svg" alt="piggy bank" />
+          <p class="py-2"><span class="text-brand-ternary fw-bolder">10m+</span> deuros de capital généré</p>
         </div>
       </section>
       <section class="row text-start p-5">
