--- a/pages/propos.html
+++ b/pages/propos.html
@@ -34,7 +34,7 @@
     <main id="main" class="container-lg text-center p-4">
       <h1 class="mt-5 text-uppercase text-brand-primary fw-bold">À propos</h1>
       <section class="p-4">
-        <div class="vh-75 d-lg-flex flex-column justify-content-center align-items-center">
+        <div class="vh-75 d-lg-flex flex-column justify-content-center align-items-center mb-lg-5 pb-lg-5">
           <h2 class="text-uppercase text-brand-primary fw-bolder">la société</h2>
           <p class="fs-8 text-shadow text-brand-primary">
             <span class="text-brand-primary">Fondée en 2013</span>, notre société Sunpower est basée à Grenoble. <br />
@@ -92,7 +92,7 @@
         </div>
         <div class="mx-auto col-lg-3 bg-light py-3 rounded">
           <img class="p-3 mt-lg-5" src="../media/svg/Vector-1.svg" alt="piggy bank" />
-          <p><span class="text-brand-ternary fw-bolder">10m+</span> deuros de capital généré</p>
+          <p><span class="text-brand-ternary fw-bolder">10m+</span> d'euros de capital généré</p>
         </div>
       </section>
       <section class="row text-start p-5">
