--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -28,7 +28,7 @@
 
     <link rel="stylesheet" href="./style.css" />
 
-    <script src="/sunpower/dist/main.js" defer></script>
+    <script src="./dist/main.js" defer></script>
 
     <title>Page d'accueil</title>
   </head>
