added map + markers and code splitting

--- a/pages/product.html
+++ b/pages/product.html
@@ -27,7 +27,7 @@
     ></script>
 
     <link rel="stylesheet" href="../style.css" />
-    <script src="../dist/main.js" defer></script>
+    <script src="../dist/main.bundle.js" defer></script>
     <title>Produits</title>
   </head>
 
@@ -47,22 +47,32 @@
         </div>
 
         <div class="row gap-3 p-3 text-center d-flex flex-row justify-content-lg-center vh-75">
-          <h2 class="d-inline-block text-center text-brand-primary">Trois raisons de choisir les ombrières solaires Sunpower:</h2>
+          <h2 class="d-inline-block text-center text-brand-primary">
+            Trois raisons de choisir les ombrières solaires Sunpower:
+          </h2>
 
-          <div id="durabilité" class="col-lg-3 d-lg-flex flex-column flex-lg-column-reverse justify-content-center ">
+          <div id="durabilité" class="col-lg-3 d-lg-flex flex-column flex-lg-column-reverse justify-content-center">
             <i class="bi bi-calendar-check fs-0 text-brand-ternary flex-fill"></i>
-            <div  class="bg-dark rounded p-2"data-aos="flip-up" data-aos-delay="300" data-aos-anchor-placement="center-bottom">
-              
+            <div
+              class="bg-dark rounded p-2"
+              data-aos="flip-up"
+              data-aos-delay="300"
+              data-aos-anchor-placement="center-bottom"
+            >
               <h3 class="mt-3 text-brand-ternary fs-7 order-1">Durabilité prouvée</h3>
               <p class="fs-8 text-white">
                 Les ombrières solaires Sunpower sont conçus pour fonctionner parfaitement en conditions réelles.
               </p>
             </div>
           </div>
-          <div id="fiabilité" class="col-lg-3 d-lg-flex flex-column flex-column-lg-reverse justify-content-center ">
+          <div id="fiabilité" class="col-lg-3 d-lg-flex flex-column flex-column-lg-reverse justify-content-center">
             <i class="bi bi-tools fs-0 text-brand-ternary"></i>
-            <div class="bg-dark rounded p-2" data-aos="flip-down" data-aos-delay="600" data-aos-anchor-placement="center-bottom">
-              
+            <div
+              class="bg-dark rounded p-2"
+              data-aos="flip-down"
+              data-aos-delay="600"
+              data-aos-anchor-placement="center-bottom"
+            >
               <h3 class="mt-3 text-brand-ternary fs-7">Fiabilité éprouvée</h3>
               <p class="fs-8 text-white">
                 Les ombrières solaires Sunpower garantissent des performances sans compromis et une fiabilité à toute
@@ -70,9 +80,14 @@
               </p>
             </div>
           </div>
-          <div id="energie" class="col-lg-3 d-lg-flex flex-column flex-lg-column-reverse justify-content-center ">
+          <div id="energie" class="col-lg-3 d-lg-flex flex-column flex-lg-column-reverse justify-content-center">
             <i class="bi bi-sun-fill fs-0 text-brand-ternary flex-fill"></i>
-            <div class="bg-dark rounded p-2" data-aos="flip-up" data-aos-delay="900" data-aos-anchor-placement="center-bottom">
+            <div
+              class="bg-dark rounded p-2"
+              data-aos="flip-up"
+              data-aos-delay="900"
+              data-aos-anchor-placement="center-bottom"
+            >
               <h3 class="mt-2 text-brand-ternary fs-7 order-1">Plus d'énergie</h3>
               <p class="fs-8 m-lg-0 text-white text-center">
                 Sunpower produit davantage d'énergie sur toute la durée de vie du système et offre l'assurance de faire
@@ -92,7 +107,9 @@
         <div class="row p-4 mt-4 bg-dark rounded g-2 mx-auto col-lg-11">
           <img class="p-0 rounded col-lg-6" src="../media/photos/panel1.png" alt="Panneaux solaires Sunpower Maxi" />
           <div class="col-lg-6 align-self-lg-center p-lg-3">
-            <h2 class="mt-3 text-brand-ternary fs-7 lh-base">Panneaux solaires <span class="d-block">Sunpower Maxi</span></h2>
+            <h2 class="mt-3 text-brand-ternary fs-7 lh-base">
+              Panneaux solaires <span class="d-block">Sunpower Maxi</span>
+            </h2>
             <p class="fs-8 text-white">
               Les panneaux solaires Sunpower Maxi allient le rendement le plus élevé du marché à une fiabilité inégalée
               et une production optimale
@@ -115,7 +132,7 @@
             <h2 class="mt-3 text-brand-ternary fs-7 lh-base">
               Panneaux solaires<span style="display: block"></span>Sunpower Turbo
             </h2>
-            <p class="fs-8  text-white">
+            <p class="fs-8 text-white">
               La fiabilité et les performances des panneaux solaires Sunpower, à la pointe du secteur, s'associent à la
               technologie des micro-onduleurs pour maximiser le potentiel de votre toit.
             </p>
