--- a/pages/activities.html
+++ b/pages/activities.html
@@ -27,7 +27,7 @@
     ></script>
 
     <link rel="stylesheet" href="../style.css" />
-    <script src="../dist/main.js" defer></script>
+    <script src="../dist/main.bundle.js" defer></script>
     <title>Activités</title>
   </head>
 
