--- a/pages/map.html
+++ b/pages/map.html
@@ -27,7 +27,8 @@
     ></script>
 
     <link rel="stylesheet" href="../style.css" />
-    <script src="../dist/main.js" defer></script>
+    <script src="../dist/main.bundle.js" defer></script>
+    <script src="../dist/map.bundle.js" defer></script>
     <title>Carte interactive</title>
   </head>
 
@@ -35,6 +36,26 @@
     <div class="title_map text-center text-brand-primary fw-bolder text-shadow fs-7 mb-0 py-4">
       Retrouvez les localisations de nos ombrières
     </div>
+    <form action="">
+      <div class="row">
+        <div class="col">
+          <input name="lat" type="text" class="form-control" placeholder="First name" aria-label="First name" />
+        </div>
+        <div class="col">
+          <input name="long" type="text" class="form-control" placeholder="Last name" aria-label="Last name" />
+        </div>
+        <div class="col">
+          <input name="client" type="text" class="form-control" placeholder="First name" aria-label="First name" />
+        </div>
+        <div class="col">
+          <input name="ombrières" type="text" class="form-control" placeholder="Last name" aria-label="Last name" />
+        </div>
+        <div class="col">
+          <input name="capacité" type="text" class="form-control" placeholder="Last name" aria-label="Last name" />
+        </div>
+      </div>
+      <button type="submit">submit</button>
+    </form>
 
     <div id="map" style="height: 85vh">
       <a href="https://www.maptiler.com" style="position: flex"
