--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="./style.css" />
 
     <script src="./dist/main.bundle.js" defer></script>
+    <script src="./dist/map.bundle.js" defer></script>
 
     <title>Page d'accueil</title>
   </head>
@@ -155,24 +156,16 @@
             <p class="text-light map-border fw-bold bg-dark bg-opacity-75 p-5">Appuyez pour ouvrir</p>
           </div>
         </div>
-
-        <div
-          id="map-container-google-1"
-          class="z-depth-1-half map-container d-none d-lg-block mb-lg-5"
-          data-aos="zoom-in"
-          data-aos-offset="200"
-          data-aos-delay="150"
-          data-aos-duration="1500"
-        >
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46221.28625561081!2d3.839064197764833!3d43.61007297556519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b6af0725dd9db1%3A0xad8756742894e802!2sMontpellier!5e0!3m2!1sfr!2sfr!4v1666879267308!5m2!1sfr!2sfr"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+        <div id="map" style="height: 85vh">
+          <a href="https://www.maptiler.com" style="position: flex"
+            ><img src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo"
+          /></a>
+        </div>
+        <p>
+          <a href="https://www.maptiler.com/copyright/" target="_blank">&copy; MapTiler</a>
+          <a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a>
+        </p>
+        
         </div>
       </section>
       <section id="frame3" class="d-flex flex-column justify-content-evenly p-3 d-lg-none">
