--- a/pages/contact_ent_form.html
+++ b/pages/contact_ent_form.html
@@ -28,7 +28,7 @@
 
     <link href="../css/contact_form.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../style.css"/>
-    <script defer src="../dist/main.js"></script>
+    <script defer src="../dist/main.bundle.js"></script>
 
     <title>Page d'accueil</title>
 </head>
